Fixed images ever so slightly spilling onto border

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2543,6 +2543,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		margin: 0px;
 	}
 
 		.image img {
